# the-hollow-lodge

./: .dockerignore  .gitignore  AGENTS.md  CODEX.md  Dockerfile  README.md  pyproject.toml
docs/: codex-play.md  gm-guide.md  operations.md  roadmap.md
scripts/: install.sh  migrate_event_log_to_postgres.py  mock_action_revision_loop.py  mock_full_game_loop.py  mock_proof_fragment_codex_loop.py  mock_social_pressure_loop.py  mock_tactical_noise_loop.py  smoke_artifact_loop.py  smoke_deal_loop.py  smoke_projection_backend.py  smoke_shipped_contracts.py
site/: Dockerfile  index.html  install.sh  nginx.conf
src/hollow_lodge/: __init__.py  mcp_server.py
tests/: conftest.py  test_imports.py  test_mcp_server.py
tests/client/: test_action_cli.py  test_api.py  test_artifact_render.py  test_chat_cli.py  test_cli_commands.py  test_codex_mcp_config.py  test_codex_session.py  test_config.py  test_contract_board.py  test_deal_cli.py  test_deal_mcp_render.py  test_deal_render.py  test_dossier_cli.py  test_errors.py  test_installer_script.py  test_local_log.py  test_phase_render.py  test_render_packets.py
tests/domain/: test_actions.py  test_artifact_graph.py  test_artifacts.py  test_deals.py  test_dossiers.py  test_proof_fragments.py  test_rubric_scoring.py  test_scoring.py
tests/e2e/: test_action_revision_loop.py  test_artifact_game_loop.py  test_cli_onboarding_readiness.py  test_codex_render_surfaces.py  test_contract_content_pipeline.py  test_escrowed_artifact_deals.py  test_event_log_migration.py  test_full_game_loop_with_escrow.py  test_mcp_codex_play_loop.py  (+6 more)
(+136 files in other folders)
