[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "the-hollow-lodge"
version = "0.1.0"
description = "An asynchronous occult-heist multiplayer game for LLM-native CLI clients."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "mcp>=1.0",
  "openai>=2.11.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
hollow-lodge = "hollow_lodge.client.cli:main"
hollow-lodge-mcp = "hollow_lodge.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
